--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.0.0",
     "react-addons-test-utils": "^15.0.0",
-    "rimraf": "^2.4.3",
+    "rimraf": "^2.4.3"
  },
   "dependencies": {
     "big-integer": "^1.6.15",
@@ -73,6 +73,6 @@
     "file-loader": "^0.8.4",
     "minimist": "^1.2.0",
     "mocha": "^2.2.5",
-    "open": "0.0.5",
+    "open": "0.0.5"
   }
 }
